scripts/stiv/tree/err
  File "tree.py", line 68
    if not node break
                    ^
SyntaxError: invalid syntax
